<resources>
    <string name="app_name">SoftwareMethodologyAndroidPP</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="back_string">Back</string>
    <string name="size_string">Size:</string>
    <string name="sauce_string">Sauce:</string>
    <string name="extras_string">Extras:</string>
    <string name="extra_sauce_string">Extra Sauce</string>
    <string name="extra_cheese_string">Extra Cheese</string>
    <string name="quantity_string">Quantity:</string>
    <string name="add_string">ADD</string>
    <string name="topping_string">Toppings</string>
    <string name="price_string">Price:</string>
    <string name="order_number">Order Number:</string>
    <string name="subtotal">Subtotal:$</string>
    <string name="sales_tax">Sales Tax:$</string>
    <string name="order_total">Order Total:$</string>
    <string name="remove_button">Remove Mode</string>
    <string name="place_prder">Place Order</string>
    <string name="pick_size">Pick a Size</string>
    <string name="pick_sauce">Pick a Sauce</string>
    <string name="tomato">Tomato</string>
    <string name="alfredo">Alfredo</string>
    <string name="extras">Extras</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="price">Price ($):</string>
    <string name="add_to_order">ADD TO ORDER</string>
    <string name="select_order_num">Select order number:</string>
    <string name="cancel_order">Cancel order</string>










</resources>