<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.CurrentOrderActivity">

    <Button
        android:id="@+id/b_back_button_co"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_string"
        android:onClick="backButtonAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_order_number_label"
        android:layout_width="111dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/order_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_back_button_co" />

    <TextView
        android:id="@+id/tv_order_number_field"
        android:layout_width="105dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_order_number_label"
        app:layout_constraintStart_toEndOf="@+id/tv_order_number_label" />

    <ListView
        android:id="@+id/lv_current_order_list"
        android:layout_width="375dp"
        android:layout_height="412dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtotal_label"
        android:layout_width="79dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="172dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_subtotal_price"
        android:layout_width="69dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_subtotal_label"
        app:layout_constraintStart_toEndOf="@+id/tv_subtotal_label" />

    <TextView
        android:id="@+id/tv_sales_tax_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="184dp"
        android:text="@string/sales_tax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_sales_tax_price"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sales_tax_label"
        app:layout_constraintStart_toEndOf="@+id/tv_sales_tax_label" />

    <TextView
        android:id="@+id/tv_order_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:text="@string/order_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_order_total_price"
        android:layout_width="75dp"
        android:layout_height="22dp"
        android:layout_marginStart="84dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_order_total_label"
        app:layout_constraintStart_toStartOf="@+id/tv_order_total_label" />

    <Button
        android:id="@+id/b_place_order"
        android:layout_width="146dp"
        android:layout_height="105dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:onClick="addToOrderButtonAction"
        android:text="@string/place_prder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/sw_removePizzaSwitch"
        android:layout_width="154dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/remove_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>