<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controllers.StoreOrdersActivity">

    <Button
        android:id="@+id/b_back_button_so"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_string"
        android:onClick="backButtonAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOrderNum"
        android:layout_width="139dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/select_order_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_back_button_so" />

    <TextView
        android:id="@+id/textpriceorderlabel"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:text="@string/order_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textOrderNum"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textpriceorder"
        android:layout_width="62dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerPrice"
        app:layout_constraintTop_toBottomOf="@+id/textpriceorderlabel" />

    <Spinner
        android:id="@+id/spinnerPrice"
        android:layout_width="116dp"
        android:layout_height="25dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toStartOf="@+id/textpriceorderlabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textOrderNum"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listviewOrders"
        android:layout_width="400dp"
        android:layout_height="525dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPrice"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>